New example: building new functions dynamically with code reflection